# Crystal-Client

./: .gitignore  CMakeLists.txt  Hacks.hpp  README.md  about.md  main.cpp  mod.json
.github/workflows/: build.yml
cmake/: CPM.cmake
imgui_themes/: darkmode.txt  hacker.txt  lightmode.txt  material.txt
include/: Plugin.hpp
src/: AchievementNotifier.cpp  Amethyst.cpp  Amethyst.hpp  CCLayerColor.cpp  CCScheduler.cpp  CMakeCache.txt  CrystalClient.cpp  CrystalClient.hpp  CrystalMenu.cpp  CrystalProfile.cpp  CrystalProfile.hpp  CrystalTheme.hpp  EditLevelLayer.cpp  EditorUI.cpp  FPSOverlay.hpp  GJBaseGameLayer.cpp  GJGameLevel.cpp  GameManager.cpp  GameObject.cpp  GameSoundManager.cpp  Hacks.hpp  HardStreak.cpp  HitboxNode.hpp  Icon.cpp  Icon.hpp  ImGui.hpp  Includes.hpp  LevelEditorLayer.cpp  LevelInfoLayer.cpp  PauseLayer.cpp  PlayLayer.cpp  PlayerObject.cpp  Renderer.cpp  Renderer.hpp  Shortcuts.cpp  Shortcuts.hpp  UILayer.cpp  amethyst.hpp  backend.cpp  bypass.mm  (+7 more)
src/Amethyst/: Amethyst.cpp  Amethyst.hpp  AmethystHooks.cpp
src/Bypass/: Anticheat.cpp  CopyHack.cpp  EditorZoom.cpp  LevelEdit.cpp  UnlockAll.cpp  VerifyHack.cpp
src/CrystalClient/: CrystalClient.cpp  CrystalClient.hpp
src/CrystalUI/: Blur.cpp  Blur.hpp  CrystalUI.cpp  CrystalUI.hpp  Fonts.hpp  ImGuiHelper.cpp
src/Display/: Attempts.cpp  BestRun.cpp  CPS.cpp  CheatIndicator.cpp  Clock.cpp  CustomMessage.cpp  Display.cpp  Display.hpp  FPS.cpp  Jumps.cpp  LastDeath.cpp  LevelInfo.cpp  MacroStatus.cpp  NoclipAccuracy.cpp  NoclipDeaths.cpp  RunFrom.cpp  TestmodeLabel.cpp
src/Global/: BetterBG.cpp  CopyLevelID.cpp  CopySongID.cpp  FPSBypass.cpp  ListButtons.cpp  LockCursor.cpp  NoTransition.cpp  SafeMode.cpp  TransparentBG.cpp  TransparentLists.cpp  Unfocus.cpp
src/Hitbox/: HitboxNode.hpp  hitbox.cpp
src/Icon/: Icon.cpp  Icon.hpp
src/ImGui/: ImGui.cpp  ImGui.hpp  backend.cpp
src/Level/: AccuratePercentage.cpp  AutoLDM.cpp  AutoSongDownload.cpp  Autoclicker.cpp  ConfirmQuit.cpp  FlippedControls.cpp  Framestep.cpp  FreezeAttempts.cpp  HideAttempts.cpp  HidePause.cpp  HidePause.hpp  HidePauseButton.cpp  Hitbox.cpp  IgnoreESC.cpp  LayoutMode.cpp  LoadFromLastCP.cpp  NoGhostTrail.cpp  NoGlow.cpp  NoMirror.cpp  NoParticles.cpp  NoPortalFlash.cpp  NoProgressBar.cpp  PauseCountdown.cpp  PlaySongLevelPage.cpp  PracticeMusic.cpp  SmartStartPos.cpp  StartPosSwitcher.cpp  StartPosSwitcher.hpp
src/Mods/Amethyst/: Amethyst.cpp  Amethyst.hpp
src/Mods/Bypass/: CopyHack.cpp  InstantComplete.cpp  UnlockAll.cpp
src/Mods/Bypasses/: CopyHack.cpp  EditorZoom.cpp  LevelEdit.cpp  VerifyHack.cpp
src/Mods/Display/: Attempts.cpp  BestRun.cpp  CPS.cpp  Clock.cpp  (+13 more)
src/Player/: AutoReset.cpp  InvisPlayer.cpp  JumpHack.cpp  NoDeathEffect.cpp  NoRotation.cpp  NoWTBehind.cpp  NoWavePulse.cpp  Noclip.cpp  OpacityWaveTrail.cpp  PracticeFix.cpp  RespawnFix.cpp  SolidTrail.cpp  SolidWaveTrail.cpp  Trail.cpp
src/Renderer/: Renderer.cpp  Renderer.hpp  Screenshot.cpp  Screenshot.hpp
src/Utilities/: utilities.hpp
src/fonts/: FeatherIcons.hpp  GeodeIcons.hpp  OpenSans.hpp  RobotoMono.hpp  SourceCodeProLight.hpp  chars.hpp
src/platform/: Win32.cpp  platform.cpp  platform.hpp
(+56 files in other folders)
